lab1/Test/L1-A-8-56.cmm
int ;
struct {
  struct zwmuxl PQI0oLg , mPbgkONyrqQJdECP7c9 = aLDMx4pRNPZe0m 
    || XhtudSA91MA >= dTQBwaFNEhz / ( sSeQ9F7Es7jntXbSglM 
    = float x_wC0331P0IeQbY && zqVqpgJG == NQkI - jDOkaoOVHIs1 
    * wC ( feK , P > ZviEA38IvrWYKe + ea4XPf * ! RPoMluvtVZHHiNCK 
    [ dEk5slv || _9PZeAHSx_J < ! my [ E9pX <= - - ! - 
    Yq != 717981853 * ! ! g_wgxkdLx6CD / - 1150323677.26011057 
    ] . RcvwxspNRv ] ) + - ! - _n8PmgllVU ( ) ) ;
}F8LdxXnbZ ( float FXo2PL8UzmBDsWR ) {
  struct UlJ68s4P8bkdOIJojw QMZQ0RfsoNsU ;
}
int VVN , rP96EUf6wrHNF1 [ 521315610 ] 

;
struct {
  int m7fORFQjKtTCqjYiLHl ;
  struct SOewmrCAkf {
  }sQZkyR_Zi4_OL_XXcJAP ;
  int KE ;
,   int Ai1ypABuZQGIAnRp ;
};
struct I97tJ57n ;
int ;
int ;
int ;
int ;
int qO5iM5yx ( ) {
  bfmH74knLYCz ;
  FuleucaI ;
  if ( ZkD4UYXrryvqJ )   while ( dyLuTkUpVNA6zmmA 
    )   if ( _GS )  {
  }else   return C1mjWqLgDwEX5v ;



}
int ;
int ;
int jpBzfmWciwmDQ2NhG ( ) {
}
int Wzf2mWwq1BaFY ( ) {
}
int vn ( int XsXQp079rw , int lFrqVkijTEUgHec0Ix ) 
  {
  g67OjV6 ;
  adQ0Ys7zWtcN87 ;
}
int nm7PyFpi38HNSZC ( ) {
}
int C80U1wRsp10WCFuZB ( ) {
  egjOXYPdJ6jSJC ;
  if ( _Imn6NRLDIMsfFSnJ )   ZhgNDtXpHQF6i0Qb8 ;
else   if ( zS )   CtZ8eASUU8fi7 ;


}
+ 